
2021-09-05  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.h (cb_exception), cobc.c: add fatal attribute
	* reserved.c, tree.h, cobc.c, help.c: added cb_list_exceptions /
	  --list-exceptions

2021-09-02  Simon Sobisch <simonsobisch@gnu.org>

	* reserved.c (cb_toupper): extracted and used in different places
	* reserved.c (cb_strncpy_upper), tree.h: renamed + exported function
	* scanner.l (copy_word_in_quotes, copy_two_words_in_quotes): internally
	  upper-case when handling reserved word adjustment
	* reserved.c (is_invalid_word): word checks extended, cobc does not
	  handle extended characters in reserved words
	* reserved.c: unpacked HASHMAP_EXTRA as only used for reserved words
	* reserved.c: work on removing the need to compare reserved words
	  case-insensitive (not finished yet)

2021-09-01  Simon Sobisch <simonsobisch@gnu.org>

	* reserved.c (default_reserved_words, cb_list_reserved), parser.y:
	  add COMMENT paragraphs back as context-sensitive words
	* reserved.c (cb_list_reserved): specify DEBUG-ITEM variables as
	  implemented if defined as register

2021-08-31  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_debug_item): only build DEBUG-ITEM if defined
	  as register and in this case unreserve overlapping reserved words
	* tree.c (cb_build_intrinsic), tree.h, reserved.c:
	  implement BIT-OF and BIT-TO-CHAR functions

2021-08-28  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_assignment_name): fix SELECT filename ASSIGN filename
	  to lead to "redefinition of filename" when (the default) dialect option
	  assign-clause=dynamic is active; identical names are now always seen
	  as literal (similar to assign-clause=external, but without label
	  handling), see bug 669

2021-07-29  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, config.def: changed the auto-setting of the RECURSIVE attribute
	  in programs that CALL their own PROGRAM-ID (possibly deep in never called